--- a/example-homeThing.yaml
+++ b/example-homeThing.yaml
@@ -28,7 +28,7 @@ homeassistant_switch_group:
 text_sensor:
   - platform: homeassistant
     entity_id: "sensor.vancouver_forecast"
-    name: ""
+    name: "Weather"
     id: sensor_weather
 
 homeassistant_sensor_group:
@@ -48,6 +48,10 @@ homeassistant_light_group:
   lights:
     - id: light_office_lamp
 
+# sonos favorite source
+media_player_source_sonos:
+  id: sonos
+
 # media player menu
 media_player:
   - platform: homeassistant_media_player
@@ -55,6 +59,9 @@ media_player:
     entity_id: "media_player.beam"
     id: media_player_beam
     type: speaker
+    sources:
+      - id: sonos
+        type: sonos
   - platform: homeassistant_media_player
     name: TV
     entity_id: "media_player.55_tcl_roku_tv"
@@ -165,6 +172,8 @@ external_components:
       homeassistant_media_player,
       homeassistant_service_group,
       homeThing,
+      media_player_source,
+      media_player_source_sonos
     ]
 
 # don't need to modify past here
