--- a/homething-lilygo.yaml
+++ b/homething-lilygo.yaml
@@ -7,10 +7,18 @@ external_components:
   - source:
     #   type: git
     #   url: https://github.com/landonr/homeThing
-    #   ref: lando/codeCleanup
+    #   ref: main
     # refresh: 0s
       type: local
       path: components
+    components: [homeThing]
+  - source:
+      type: git
+      url: https://github.com/landonr/esphome-components
+      ref: main
+    refresh: 0s
+      # type: local
+      # path: ../local_components/components
     components: [
       homeassistant_component, 
       homeassistant_switch_group, 
@@ -18,7 +26,6 @@ external_components:
       homeassistant_light_group,
       homeassistant_media_player,
       homeassistant_service_group,
-      homeThing,
       media_player_source,
       media_player_source_sonos,
       media_player_source_spotify,
