--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -10,18 +10,25 @@ external_components:
   - source:
     #   type: git
     #   url: https://github.com/landonr/homeThing
-    #   ref: lando/codeCleanup
+    #   ref: main
     # refresh: 0s
       type: local
       path: components
-    components: [ 
+    components: [homeThing]
+  - source:
+      type: git
+      url: https://github.com/landonr/esphome-components
+      ref: main
+    refresh: 0s
+      # type: local
+      # path: ../local_components/components
+    components: [
       homeassistant_component, 
       homeassistant_switch_group, 
       homeassistant_sensor_group,
       homeassistant_light_group,
       homeassistant_media_player,
       homeassistant_service_group,
-      homeThing,
       media_player_source,
       media_player_source_sonos,
       media_player_source_spotify,
