--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -14,6 +14,11 @@ i2c:
 
 external_components:
   - source:
+      type: git
+      url: https://gitlab.com/geiseri/esphome_extras.git
+    refresh: 0s
+    components: [axp192]
+  - source:
     #   type: git
     #   url: https://github.com/landonr/homeThing
     #   ref: main
