cache menu items to improve performance

--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -13,3 +13,15 @@ binary_sensor:
   - platform: status
     id: api_connected
     internal: true
+
+sensor:
+  # Uptime sensor.
+  - platform: uptime
+    name: "${friendly_name} Uptime"
+    update_interval: 1s
+  - platform: template
+    name: "${friendly_name} Free Memory"
+    lambda: return heap_caps_get_free_size(MALLOC_CAP_INTERNAL);
+    unit_of_measurement: 'B'
+    state_class: measurement
+    update_interval: 1s
