--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -3,6 +3,15 @@ esphome:
   platform: ESP32
   board: m5stack-fire
 
+wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
+  fast_connect: true
+  id: wifi_id
+  ap:
+    ssid: "${friendly_name} Fallback"
+    password: !secret wifi_fallback_password
+
 external_components:
   - source:
       type: git
@@ -38,7 +47,6 @@ external_components:
 
 packages:
   device_base: !include common/device_base.yaml
-  setup: !include homeConfig/device_setup.yaml
   home_media_player: !include homeConfig/media_player.yaml
   home_text_sensor: !include homeConfig/text_sensor.yaml
   home_light: !include homeConfig/light.yaml
