--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -2,6 +2,16 @@ esphome:
   name: lilygo_display
   platform: ESP32
   board: featheresp32
+  on_boot:
+    priority: 600.0
+    then:
+      - delay: 45s
+      - if:
+          condition:
+            not:
+              - wifi.connected:
+          then:
+            - switch.turn_on: sleep_toggle
 
 wifi:
   ssid: !secret wifi_ssid
