--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -1,5 +1,15 @@
 esphome:
   name: tdisplayt4
+  on_boot:
+    priority: 600.0
+    then:
+      - delay: 45s
+      - if:
+          condition:
+            not:
+              - wifi.connected:
+          then:
+            - switch.turn_on: sleep_toggle
 
 esp32:
   board: esp32dev
