--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -1,5 +1,15 @@
 esphome:
   name: m5stickc
+  on_boot:
+    priority: 600.0
+    then:
+      - delay: 45s
+      - if:
+          condition:
+            not:
+              - wifi.connected:
+          then:
+            - switch.turn_on: sleep_toggle
 
 esp32:
   board: m5stick-c
