--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -33,20 +33,20 @@ external_components:
       url: https://github.com/ssieb/custom_components
     components: [ ip5306 ]
   - source:
-    #   type: git
-    #   url: https://github.com/landonr/homeThing
-    #   ref: main
-    # refresh: 0s
-      type: local
-      path: components
+      type: git
+      url: https://github.com/landonr/homeThing
+      ref: main
+    refresh: 0s
+      # type: local
+      # path: components
     components: [homeThing]
   - source:
-  #     type: git
-  #     url: https://github.com/landonr/esphome-components
-  #     ref: main
-  #   refresh: 0s
-      type: local
-      path: ../local_components/components
+      type: git
+      url: https://github.com/landonr/esphome-components
+      ref: main
+    refresh: 0s
+      # type: local
+      # path: ../local_components/components
     components: [
       homeassistant_component, 
       homeassistant_switch_group, 
