--- a/m5stickcplus.yaml
+++ b/m5stickcplus.yaml
@@ -128,7 +128,7 @@ sensor:
     # AXP192 power management - must be present to initialize TFT power on
   - platform: axp192
     axp192_id: axp
-    id: batteryPercent
+    id: battery_percent
     type: battery_power
     name: "${friendly_name} Battery Percent"
 
@@ -166,11 +166,6 @@ binary_sensor:
     type: charge_indicate
     id: axp_charger
     name: "Charger"
-    on_state:
-      then:
-        lambda: |-
-          // charging = x;
-          int i = 0;
   - platform: gpio
     pin:
       number: GPIO37
@@ -186,7 +181,6 @@ binary_sensor:
     on_release:
       then:
         - light.turn_off: led1
-        
   - platform: gpio
     pin:
       number: GPIO39
@@ -239,6 +233,9 @@ homeThing:
     mode: 3_button
   sleep_switch: sleep_toggle
   backlight: backlight
+  # battery:
+  #   battery_percent: battery_percent
+  #   charging: axp_charger
   media_player_group: media_group_component
   light_group: light_group_component
   service_group: service_group_component
@@ -266,12 +263,6 @@ display:
     rotation: 0
     update_interval: 3600s
     lambda: |-
-      // if (idleTime < 0) {
-      //   ESP_LOGD("drawing menu", "turning on");
-      //   id(backlight).turn_on();
-      //   idleTime = 0;
-      // }
-
       id(homeThingMenu)->draw_menu_screen();
       return;
 
