--- a/homeConfig/switch.yaml
+++ b/homeConfig/switch.yaml
@@ -3,3 +3,8 @@ switch:
     entity_id: "switch.oven_fan"
     name: "Oven Fan"
     id: oven_fan_switch
+
+homeassistant_switch_group:
+  id: switch_group_component
+  switches:
+    - id: "oven_fan_switch"
